# ocrd_tesserocr

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pylintrc  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  ocrd-tool.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: cd-pypi.yml  docker-image.yml
ocrd_tesserocr/: __init__.py  binarize.py  cli.py  common.py  config.py  crop.py  deskew.py  fontshape.py  ocrd-tool.json  recognize.py  segment.py  segment_glyph.py  segment_line.py  segment_region.py  segment_table.py  segment_word.py
repo/: assets
test/: base.py  conftest.py  test_cli.py  test_recognize.py  test_segment.py  test_segment_glyph.py  test_segment_line.py  test_segment_region.py  test_segment_table.py  test_segment_word.py
test/processor/: test_recognize.py  test_segment_line.py  test_segment_region.py
